--- a/style.css
+++ b/style.css
@@ -1,1 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+h1 {
+    display: flex;
+    justify-content: center; 
+    align-items: center;  
+}
